--- a/ansible/roles/iso-generator/tasks/main.yaml
+++ b/ansible/roles/iso-generator/tasks/main.yaml
@@ -122,3 +122,22 @@
     - "{{ scratch_path }}"
     - "{{ iso_mount_path }}"
     - "/tmp/{{ edge_iso_name }}"
+
+- name: Get httpd Route
+  community.kubernetes.k8s_info:
+    api_key: "{{ lookup('file', '/var/run/secrets/kubernetes.io/serviceaccount/token') }}"
+    api_version: route.openshift.io/v1
+    ca_cert: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+    host: https://kubernetes.default.svc
+    kind: Route
+    name: httpd
+    namespace: rfe
+    validate_certs: yes
+  register: httpd_route
+  delegate_to: localhost
+
+- name: Set iso_storage_url Result
+  ansible.builtin.copy:
+    content: "{{ ('https://' if httpd_route.resources[0].spec.tls is defined else 'http://') + httpd_route.resources[0].spec.host }}/images/{{ edge_iso_name }}"
+    dest: "{{ iso_storage_url }}"
+  delegate_to: localhost
