--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 local/
+openshift/gitops/clusters/overlays/byo/bootstrap/redhat-portal-credentials
+openshift/gitops/clusters/overlays/byo/bootstrap/image-builder-ssh-private-key
+openshift/gitops/clusters/overlays/byo/bootstrap/image-builder-ssh-public-key
+
