Fixes for Nexus operator changes

--- a/openshift/gitops/manifests/rfe/nexus/base/nexus-setup-job.yaml
+++ b/openshift/gitops/manifests/rfe/nexus/base/nexus-setup-job.yaml
@@ -102,6 +102,6 @@ spec:
           name: nexus-setup
       dnsPolicy: ClusterFirst
       restartPolicy: OnFailure
-      serviceAccount: default
-      serviceAccountName: default
+      serviceAccount: nexus-setup
+      serviceAccountName: nexus-setup
       terminationGracePeriodSeconds: 30
