--- a/openshift/gitops/manifests/rfe/nexus/base/kustomization.yaml
+++ b/openshift/gitops/manifests/rfe/nexus/base/kustomization.yaml
@@ -7,4 +7,7 @@ resources:
   - nexus-operatorgroup.yaml
   - nexus-subscription.yaml
   - nexus.yaml
+  - nexus-setup-serviceaccount.yaml
+  - nexus-setup-role.yaml
+  - nexus-setup-rolebinding.yaml
   - nexus-setup-job.yaml
