--- a/openshift/gitops/manifests/rfe/nexus/base/nexus-setup-rolebinding.yaml
+++ b/openshift/gitops/manifests/rfe/nexus/base/nexus-setup-rolebinding.yaml
@@ -1,13 +1,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: rfe-automation
+  name: nexus-setup
   namespace: rfe
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: rfe-automation
+  name: nexus-setup
 subjects:
   - kind: ServiceAccount
-    name: rfe-automation
+    name: nexus-setup
     namespace: rfe
