Updating sealed secrets controller to report status for Argo CD.

--- a/openshift/gitops/manifests/configs/sealed-secrets/base/sealed-secrets.yaml
+++ b/openshift/gitops/manifests/configs/sealed-secrets/base/sealed-secrets.yaml
@@ -102,7 +102,10 @@ spec:
         - args: []
           command:
             - controller
-          env: []
+            - --update-status
+          env:
+          - name: SEALED_SECRETS_UPDATE_STATUS
+            value: "1"
           image: quay.io/bitnami/sealed-secrets-controller:v0.15.0
           imagePullPolicy: Always
           livenessProbe:
@@ -141,6 +144,8 @@ kind: CustomResourceDefinition
 metadata:
   name: sealedsecrets.bitnami.com
 spec:
+  conversion:
+    strategy: None
   group: bitnami.com
   names:
     kind: SealedSecret
@@ -149,18 +154,20 @@ spec:
     singular: sealedsecret
   scope: Namespaced
   versions:
-    - name: v1alpha1
-      schema:
-        openAPIV3Schema:
-          properties:
-            spec:
-              type: object
-              x-kubernetes-preserve-unknown-fields: true
-          type: object
-      served: true
-      storage: true
-      subresources:
-        status: {}
+  - name: v1alpha1
+    schema:
+      openAPIV3Schema:
+        properties:
+          spec:
+            type: object
+            x-kubernetes-preserve-unknown-fields: true
+          status:
+            x-kubernetes-preserve-unknown-fields: true
+        type: object
+    served: true
+    storage: true
+    subresources:
+      status: {}
 ---
 apiVersion: v1
 kind: Service
