--- a/openshift/gitops/manifests/configs/ocs/base/noobaa.yaml
+++ b/openshift/gitops/manifests/configs/ocs/base/noobaa.yaml
@@ -3,6 +3,8 @@ kind: NooBaa
 metadata:
   name: noobaa
   namespace: openshift-storage
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   dbResources:
     requests:
