--- a/openshift/gitops/manifests/configs/ocs/base/noobaa.yaml
+++ b/openshift/gitops/manifests/configs/ocs/base/noobaa.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: openshift-storage
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "5"
 spec:
   dbResources:
     requests:
