--- a/openshift/gitops/manifests/configs/cnv/base/subscription.yaml
+++ b/openshift/gitops/manifests/configs/cnv/base/subscription.yaml
@@ -7,4 +7,4 @@ spec:
   source: redhat-operators
   sourceNamespace: openshift-marketplace
   name: kubevirt-hyperconverged
-  channel: "stable"
+  channel: stable
