Type updates (string->bool).

--- a/openshift/gitops/manifests/rfe/image-builder-vm/base/image-builder-vm-ansible-job.yaml
+++ b/openshift/gitops/manifests/rfe/image-builder-vm/base/image-builder-vm-ansible-job.yaml
@@ -36,10 +36,10 @@ spec:
           volumeMounts:
             - name: image-builder-ssh-key
               mountPath: /var/secrets/image-builder-ssh-key
-              readOnly: yes
+              readOnly: true
             - name: redhat-portal-credentials
               mountPath: /var/secrets/redhat-portal-credentials
-              readOnly: yes
+              readOnly: true
           imagePullPolicy: Always
           name: ansible-rfe-runner
       volumes:
