--- a/openshift/gitops/manifests/configs/pipelines/base/kustomization.yaml
+++ b/openshift/gitops/manifests/configs/pipelines/base/kustomization.yaml
@@ -1,8 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: openshift-pipelines
-
 resources:
   - namespace.yaml
+  - subscription.yaml
   - config-defaults-configmap.yaml
