--- a/openshift/gitops/manifests/rfe/pipelines/base/rfe-iso-pipeline.yaml
+++ b/openshift/gitops/manifests/rfe/pipelines/base/rfe-iso-pipeline.yaml
@@ -13,7 +13,7 @@ spec:
       type: string
     - name: tooling-git-revision
       description: Tooling Repository URL Reference
-      default: main
+      default: v1
       type: string
     - name: kickstart-url
       description: URL pointing to kickstart location
