--- a/openshift/gitops/clusters/overlays/byo/argocd/manager/cluster-config-manager-app.yaml
+++ b/openshift/gitops/clusters/overlays/byo/argocd/manager/cluster-config-manager-app.yaml
@@ -11,7 +11,7 @@ spec:
   source:
     path: openshift/gitops/clusters/overlays/byo/argocd/configs
     repoURL: https://github.com/redhat-cop/rhel-edge-automation-arch.git
-    targetRevision: main
+    targetRevision: v1
   syncPolicy:
     automated:
       prune: false
