--- a/openshift/gitops/manifests/argocd/apps/configs/auth/base/auth-app.yaml
+++ b/openshift/gitops/manifests/argocd/apps/configs/auth/base/auth-app.yaml
@@ -14,7 +14,7 @@ spec:
   source:
     path: openshift/gitops/manifests/configs/auth/base
     repoURL: https://github.com/redhat-cop/rhel-edge-automation-arch.git
-    targetRevision: main
+    targetRevision: v1
   syncPolicy:
     automated:
       prune: false
