--- a/openshift/gitops/manifests/argocd/apps/configs/sealed-secrets/base/sealed-secrets-app.yaml
+++ b/openshift/gitops/manifests/argocd/apps/configs/sealed-secrets/base/sealed-secrets-app.yaml
@@ -15,7 +15,7 @@ spec:
   source:
     path: openshift/gitops/manifests/configs/sealed-secrets/overlays/default
     repoURL: https://github.com/redhat-cop/rhel-edge-automation-arch.git
-    targetRevision: main
+    targetRevision: v1
   syncPolicy:
     automated:
       prune: false
