--- a/openshift/gitops/manifests/rfe/pipelines/base/rfe-tarball-pipeline.yaml
+++ b/openshift/gitops/manifests/rfe/pipelines/base/rfe-tarball-pipeline.yaml
@@ -21,7 +21,7 @@ spec:
       type: string
     - name: tooling-git-revision
       description: Tooling Repository URL Reference
-      default: main
+      default: v1
       type: string
     - name: blueprint-dir
       description: Directory in Blueprints repository containing blueprint
