--- a/openshift/gitops/manifests/rfe/rbac/base/rfe-automation-role.yaml
+++ b/openshift/gitops/manifests/rfe/rbac/base/rfe-automation-role.yaml
@@ -5,16 +5,22 @@ metadata:
   namespace: rfe
 rules:
   - apiGroups:
-      - ""
+      - "*"
+    resources:
+      - secrets
+      - configmaps
+    verbs:
+      - "*"
+  - apiGroups:
+      - "*"
     resources:
       - pods
       - services
-      - secrets
     verbs:
       - list
       - get
   - apiGroups:
-      - ""
+      - "*"
     resources:
       - pods/exec
     verbs:
