--- a/openshift/gitops/manifests/rfe/rbac/base/rfe-automation-role.yaml
+++ b/openshift/gitops/manifests/rfe/rbac/base/rfe-automation-role.yaml
@@ -10,7 +10,11 @@ rules:
       - secrets
       - configmaps
     verbs:
-      - "*"
+      - create
+      - patch
+      - list
+      - update
+      - get
   - apiGroups:
       - "*"
     resources:
