Adding secrets for entitled builds. Removing yum update from runner Dockerfile.

--- a/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-runner-buildconfig.yaml
+++ b/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-runner-buildconfig.yaml
@@ -10,17 +10,14 @@ spec:
     dockerfile: |
       FROM registry.access.redhat.com/ubi8/python-38
       USER 0
-      RUN dnf update -y && \
-          pip install --upgrade pip && \
+      RUN pip install --upgrade pip && \
           pip install openshift && \
           pip install jmespath && \
           pip install netaddr && \
           pip install ansible==2.9.* && \
           curl -L https://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/openshift-client-linux.tar.gz | \
             tar -xvzf - -C /usr/local/bin/ oc && chmod 755 /usr/local/bin/oc && ln -s /usr/local/bin/oc /usr/local/bin/kubectl
-
       USER 1001
-
   strategy:
     type: Docker
     dockerStrategy:
