--- a/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-runner-buildconfig.yaml
+++ b/openshift/gitops/manifests/rfe/ansible-rfe-runner/base/ansible-rfe-runner-buildconfig.yaml
@@ -10,8 +10,7 @@ spec:
     dockerfile: |
       FROM registry.access.redhat.com/ubi8/python-38
       USER 0
-      RUN dnf update -y && \
-          pip install --upgrade pip && \
+      RUN pip install --upgrade pip && \
           pip install openshift && \
           pip install jmespath && \
           pip install netaddr && \
