Adding httpd-ostree IS/BC. Updating httpd deployment to use httpd-ostree.

--- a/openshift/gitops/manifests/rfe/httpd/base/kustomization.yaml
+++ b/openshift/gitops/manifests/rfe/httpd/base/kustomization.yaml
@@ -8,3 +8,5 @@ resources:
   - service.yaml
   - deployment.yaml
   - route.yaml
+  - httpd-ostree-imagestream.yaml
+  - httpd-ostree-buildconfig.yaml
