Support for not squashing existing IDP

--- a/openshift/gitops/clusters/overlays/byo/configs/auth/kustomization.yaml
+++ b/openshift/gitops/clusters/overlays/byo/configs/auth/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - rhel-edge-admins-group.yaml
 
 patchesStrategicMerge:
-  - oauth.yaml
+  - oauth-patch.yaml
 
 secretGenerator:
   - name: htpasswd-secret
