Support for not squashing existing IDP

--- a/openshift/gitops/environments/overlays/configs/kustomization.yaml
+++ b/openshift/gitops/environments/overlays/configs/kustomization.yaml
@@ -11,3 +11,4 @@ bases:
   - ../../../manifests/argocd/apps/configs/user-workload-monitoring/base
   - ../../../manifests/argocd/apps/configs/cnv/base
   - ../../../manifests/argocd/apps/configs/pipelines/base
+  - ../../../manifests/argocd/apps/configs/resource-locker/base
