Enabled sockets for image-builder

--- a/ansible/roles/image-builder/tasks/main.yaml
+++ b/ansible/roles/image-builder/tasks/main.yaml
@@ -31,10 +31,10 @@
     enabled: yes
     name: "{{ item }}"
   loop:
-    - osbuild-composer
-    - cockpit
+    - osbuild-composer.socket
+    - cockpit.socket
     - firewalld
-    
+
 - name: Enable Firewall Ports for Cockpit/Composer
   ansible.posix.firewalld:
     service: cockpit
