--- a/openshift/gitops/environments/overlays/configs/kustomization.yaml
+++ b/openshift/gitops/environments/overlays/configs/kustomization.yaml
@@ -13,3 +13,4 @@ bases:
   - ../../../manifests/argocd/apps/configs/ocs/base
   - ../../../manifests/argocd/apps/configs/pipelines/base
   - ../../../manifests/argocd/apps/configs/quay/base
+  - ../../../manifests/argocd/apps/configs/resource-locker/base
