--- a/openshift/gitops/manifests/configs/auth/base/oauth-patch.yaml
+++ b/openshift/gitops/manifests/configs/auth/base/oauth-patch.yaml
@@ -6,6 +6,8 @@ metadata:
   annotations:
     argocd.argoproj.io/compare-options: IgnoreExtraneous
     argocd.argoproj.io/sync-options: Prune=false
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: "5"
 spec:
   serviceAccountRef:
     name: resource-locker-oauth-sa
