Upload media to nexus instead of httpd. Point image-builder CDI source to nexus instead of httpd.

--- a/openshift/gitops/manifests/rfe/image-builder-vm/base/image-builder-vm.yaml
+++ b/openshift/gitops/manifests/rfe/image-builder-vm/base/image-builder-vm.yaml
@@ -27,7 +27,7 @@ spec:
           volumeMode: Filesystem
         source:
           http:
-            url: 'http://httpd:8080/images/rhel-8.4-x86_64-kvm.qcow2'
+            url: 'http://nexus:8081/repository/rfe-rhel-media/rhel-8.4-x86_64-kvm.qcow2'
   running: true
   template:
     metadata:
