Adding missing var nexus_credentials_secret_name. Updating rfe nexus role to include rfe-rhel-media repository.

--- a/ansible/playbooks/redhat-image-downloader.yaml
+++ b/ansible/playbooks/redhat-image-downloader.yaml
@@ -1,5 +1,7 @@
 - name: Download Red Hat Images
   hosts: localhost
+  vars:
+    nexus_credentials_secret_name: nexus-rfe-credentials
   roles:
     - role: redhat-image-downloader
   tasks:
