--- a/openshift/gitops/manifests/rfe/rbac/base/rfe-automation-role.yaml
+++ b/openshift/gitops/manifests/rfe/rbac/base/rfe-automation-role.yaml
@@ -44,3 +44,10 @@ rules:
     verbs:
       - get
       - list
+  - apiGroups:
+      - quay.redhat.com
+    resources:
+      - QuayRegistry
+    verbs:
+      - get
+      - list
