--- a/openshift/gitops/manifests/rfe/pipelines/base/rfe-oci-image-pipeline.yaml
+++ b/openshift/gitops/manifests/rfe/pipelines/base/rfe-oci-image-pipeline.yaml
@@ -26,6 +26,13 @@ spec:
     - name: blueprint-dir
       description: Directory in Blueprints repository containing blueprint
       type: string
+  results:
+    - name: build-commit
+      description: Commit ID of the Build
+    - name: image-repository-path
+      description: Path to Container Registry
+    - name: image-tags
+      description: Tags Associated with Image
   workspaces:
     - name: shared-workspace
   tasks:
@@ -80,8 +87,6 @@ spec:
         - name: blueprint-dir
           value: /workspace/workspace/blueprints/$(params.blueprint-dir)
       runAfter:
-        - "git-clone-blueprints"
-        - "git-clone-tooling"
         - "rfe-oci-quay-repository"
       workspaces:
         - name: workspace
